--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,7 @@
 copy.src.files=false
 copy.src.target=E:\\xampp\\htdocs\\PhpProject1
 index.file=index.php
-run.as=LOCAL
-url=http://localhost/slot-machine1/
+remote.connection=dev_bitbandit.eu-e661a1
+remote.upload=MANUALLY
+run.as=REMOTE
+url=jolnir.orangewebsite.com
